--- a/public/index.html
+++ b/public/index.html
@@ -1036,7 +1036,7 @@
     <script>
         class EnhancedMusicPlayer {
             constructor() {
-                this.baseUrl = 'http://localhost:3000';
+                this.baseUrl = 'https://songify-6k9c.onrender.com';
                 this.allSongs = [];
                 this.currentVisibleSongs = [];
                 this.currentPage = 1;
