--- a/public/room.html
+++ b/public/room.html
@@ -359,7 +359,7 @@
 
         function initializeSocket() {
             // Connect to your server (change URL as needed)
-            socket = io('http://localhost:3000');
+            socket = io('http://209.74.95.163:3000');
 
             socket.on('connect', function() {
                 log('✅ Connected to server');
