--- a/public/room.html
+++ b/public/room.html
@@ -681,7 +681,7 @@
 
         function initializeSocket() {
             // Connect to your server (change URL as needed)
-            socket = io('http://localhost:3000');
+            socket = io('https://songify-6k9c.onrender.com');
 
             socket.on('connect', function() {
                 log('✅ Connected to server');
